--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -30,30 +30,31 @@ jobs:
                 shell: bash
                 working-directory: ./terraform
         steps:
-            - name: "checkout source code"
+            - name: checkout source code
               uses: actions/checkout@v4  
 
-            - name: "Setup Terraform with specified version on the runner"
+            - name: Setup Terraform with specified version on the runner
               uses: hashicorp/setup-terraform@v2
-                #with:
-                    #terraform_version: 1.6.3
-            - name: "Terraform init"
+              #with:
+              #   terraform_version: 1.6.3
+
+            - name: Terraform init
               id: init
               run: terraform init -backend-config="bucket=$BUCKET_TF_STATE"
 
-            - name: "Terraform format"
+            - name: Terraform format
               id: fmt
               run: terraform fmt -check
 
-            - name: "Terraform Validate"
+            - name: Terraform Validate
               id: validate
               run: terraform validate
 
-            - name: "Terraform plan"
+            - name: Terraform plan
               id: plan
               run: terraform plan -no-color -input=false -out planfile
               continue-on-error: true
 
-            - name: "Terraform plan status"
+            - name: Terraform plan status
               if: steps.plan.outcome == 'failure'
               run: exit 1
